--- a/.github/workflows/main_get-started.yml
+++ b/.github/workflows/main_get-started.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: java-app
+          name: spring-azure-app
           path: '${{ github.workspace }}/target/*.war'
 
   deploy:
@@ -44,7 +44,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: java-app
+          name: spring-azure-app
       
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
